@@ -359,6 +359,8 @@ Severity: important
 Certainty: possible
 Info: The given init script sources the <tt>/lib/lsb/init-functions</tt> utility
  functions without declaring the corresponding dependency on lsb-base.
+ .
+ This dependency is not required for packages that ship a native service file.
 
 Tag: init.d-script-contains-skeleton-template-content
 Severity: important
